[gd_scene load_steps=30 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://UI/TitleArt.png" type="Texture" id=2]
[ext_resource path="res://World/Ground.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Starship.gd" type="Script" id=5]
[ext_resource path="res://Hitbox and Hurtbox/Hurtbox3D.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Vegetation/Tree.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/Buildings/5.vox" type="ArrayMesh" id=8]
[ext_resource path="res://Enemies/starship.vox" type="ArrayMesh" id=9]
[ext_resource path="res://World/Buildings/1.vox" type="ArrayMesh" id=10]
[ext_resource path="res://World/Buildings/3.vox" type="ArrayMesh" id=11]
[ext_resource path="res://World/Buildings/6.vox" type="ArrayMesh" id=12]
[ext_resource path="res://World/Buildings/7.vox" type="ArrayMesh" id=13]
[ext_resource path="res://World/Buildings/2.vox" type="ArrayMesh" id=14]
[ext_resource path="res://Shaders/Clouds2D/CloudsVisible.tres" type="Material" id=15]
[ext_resource path="res://World/Vegetation/tree.vox" type="ArrayMesh" id=16]
[ext_resource path="res://World/Vegetation/Grass.tscn" type="PackedScene" id=17]
[ext_resource path="res://World/Menu/menu_buttons-1-Play.vox" type="ArrayMesh" id=18]
[ext_resource path="res://World/Menu/menu_buttons-0-Quit.vox" type="ArrayMesh" id=19]

[sub_resource type="ProceduralSky" id=9]
sky_top_color = Color( 0.533333, 0.34902, 0.568627, 1 )
sky_horizon_color = Color( 1, 0.831373, 0.611765, 1 )
sky_curve = 0.136414
ground_bottom_color = Color( 1, 0.831373, 0.611765, 1 )
ground_horizon_color = Color( 1, 0.643137, 0.541176, 1 )
ground_curve = 0.034822

[sub_resource type="Environment" id=10]
background_mode = 2
background_sky = SubResource( 9 )
background_sky_custom_fov = 89.9
ambient_light_color = Color( 0.886275, 0.701961, 0.34902, 1 )
ambient_light_energy = 1.5
ambient_light_sky_contribution = 0.5
fog_enabled = true
fog_depth_begin = 4.0
fog_depth_curve = 0.183011
tonemap_mode = 2
ssao_intensity = 8.25
adjustment_enabled = true

[sub_resource type="QuadMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 4 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 10, 1, 10 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.08, 0.2, 0.08 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 1.3, 1.5, 1.4 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.4, 1.25, 1.5 )

[sub_resource type="QuadMesh" id=11]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[node name="Menu" type="Spatial"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 2
margin_left = -2.0
margin_top = 6.0
margin_right = 298.0
margin_bottom = 106.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Post Processing" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 0.921505, 0.235161, -0.309075, 0.0946882, 0.635775, 0.766044, 0.376646, -0.73518, 0.563603, 0, 3.87753, 0 )
shadow_enabled = true
shadow_color = Color( 0.882353, 0.823529, 0.678431, 1 )

[node name="Plane" type="StaticBody" parent="."]
collision_mask = 0

[node name="MeshInstance" type="MeshInstance" parent="Plane"]
transform = Transform( 20, 0, 0, 0, -1.74846e-06, 1, 0, -40, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Plane"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.933422, 0 )
shape = SubResource( 8 )

[node name="Tree" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.426157, -1.90735e-06, -4.33639 )
collision_mask = 0

[node name="tree" type="MeshInstance" parent="Tree"]
transform = Transform( -8.74228e-09, 0, -0.2, 0, 0.2, 0, 0.2, 0, -8.74228e-09, 0.149554, 0.00410983, -0.103335 )
mesh = ExtResource( 16 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Tree"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00293496, 0.211306, 0 )
shape = SubResource( 12 )

[node name="Tree" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( 0.505642, 0, -0.862743, 0, 1, 0, 0.862743, 0, 0.505642, -7.62897, -1.90735e-06, -1.77396 )

[node name="Tree2" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( -0.649196, 0, -0.760621, 0, 1, 0, 0.760621, 0, -0.649196, -6.24994, -1.90735e-06, -0.338877 )

[node name="Tree3" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( -0.47115, 0, 0.882053, 0, 1, 0, -0.882053, 0, -0.47115, -7.13697, -1.90735e-06, 1.32183 )

[node name="Tree4" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( -0.798268, 0, -0.602303, 0, 1, 0, 0.602303, 0, -0.798268, -5.97472, -1.90735e-06, 3.0062 )

[node name="Tree5" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( 0.229761, 0, 0.973247, 0, 1, 0, -0.973247, 0, 0.229761, -5.97472, -1.90735e-06, 1.74496 )

[node name="Tree6" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( 0.229761, 0, 0.973247, 0, 1, 0, -0.973247, 0, 0.229761, -5.97472, -1.90735e-06, 4.83953 )

[node name="Tree19" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( 0.229761, 0, 0.973247, 0, 1, 0, -0.973247, 0, 0.229761, -6.96571, -1.90735e-06, 6.01299 )

[node name="Tree7" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( -0.278488, 0, -0.96044, 0, 1, 0, 0.96044, 0, -0.278488, -3.40775, -1.90735e-06, -8.0364 )

[node name="Tree8" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( -0.998652, 0, -0.0519001, 0, 1, 0, 0.0519001, 0, -0.998652, -3.50099, -1.90735e-06, -6.04831 )

[node name="Tree9" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( 0.316229, 0, 0.948683, 0, 1, 0, -0.948683, 0, 0.316229, -5.3166, -1.90735e-06, -5.54998 )

[node name="Tree10" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( -0.98626, 0, 0.165203, 0, 1, 0, -0.165203, 0, -0.98626, -5.7399, -1.90735e-06, -3.54779 )

[node name="Tree11" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( 0.864512, 0, 0.502612, 0, 1, 0, -0.502612, 0, 0.864512, -4.82436, -1.90735e-06, -4.41527 )

[node name="Tree12" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( 0.864512, 0, 0.502612, 0, 1, 0, -0.502612, 0, 0.864512, -7.07072, -1.90735e-06, -2.28683 )

[node name="Tree13" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( -0.721458, 0, -0.692458, 0, 1, 0, 0.692458, 0, -0.721458, 1.36429, -1.90735e-06, -9.46866 )

[node name="Tree14" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( -0.890769, 0, 0.454457, 0, 1, 0, -0.454457, 0, -0.890769, 0.289355, -1.90735e-06, -7.79363 )

[node name="Tree15" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( 0.748261, 0, 0.663404, 0, 1, 0, -0.663404, 0, 0.748261, -1.53213, -1.90735e-06, -8.27003 )

[node name="Tree16" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( -0.771469, 0, 0.636267, 0, 1, 0, -0.636267, 0, -0.771469, -2.89995, -1.90735e-06, -6.74785 )

[node name="Tree17" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( 0.999996, 0, 0.00293195, 0, 1, 0, -0.00293195, 0, 0.999996, -1.6733, -1.90735e-06, -7.04123 )

[node name="Tree18" parent="Tree" instance=ExtResource( 7 )]
transform = Transform( 0.999996, 0, 0.00293195, 0, 1, 0, -0.00293195, 0, 0.999996, -4.68299, -1.90735e-06, -6.32139 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.595576, -0.132136, 0.792357, 0.00458189, 0.986921, 0.161139, -0.803286, -0.0923399, 0.588392, 0.171, 0.392, -3.16 )
current = true
fov = 63.5

[node name="Starship" type="KinematicBody" parent="."]
transform = Transform( 0.0604112, 0, -0.0796899, 0, 0.1, 0, 0.0796899, 0, 0.0604112, 0.0803562, 0.0295615, -3.93018 )
collision_layer = 17
collision_mask = 0
script = ExtResource( 5 )

[node name="starship" type="MeshInstance" parent="Starship"]
mesh = ExtResource( 9 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Starship"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.046, 1.5, 0 )
shape = SubResource( 13 )

[node name="Hurtbox3D" parent="Starship" instance=ExtResource( 6 )]
collision_layer = 8

[node name="CollisionShape" parent="Starship/Hurtbox3D" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24501, 0 )
shape = SubResource( 2 )

[node name="Starship2" type="KinematicBody" parent="."]
transform = Transform( -0.0220697, 0, 0.0975342, 0, 0.1, 0, -0.0975342, 0, -0.0220697, -0.470795, 0.0295615, -3.70196 )
collision_layer = 17
collision_mask = 0
script = ExtResource( 5 )

[node name="starship" type="MeshInstance" parent="Starship2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = ExtResource( 9 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Starship2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.046, 1.5, 0 )
shape = SubResource( 13 )

[node name="Hurtbox3D" parent="Starship2" instance=ExtResource( 6 )]
collision_layer = 8

[node name="CollisionShape" parent="Starship2/Hurtbox3D" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24501, 0 )
shape = SubResource( 2 )

[node name="Buildings" type="MeshInstance" parent="."]
transform = Transform( 0.026473, 0, 0.499299, 0, 0.5, 0, -0.499299, 0, 0.026473, -8.31034, -0.0515516, -3.67033 )
mesh = ExtResource( 10 )
material/0 = null

[node name="6" type="MeshInstance" parent="Buildings"]
transform = Transform( 0.00137879, 0, -0.999999, 0, 1, 0, 0.999999, 0, 0.00137879, -2.91516, 0.00291689, 0.177526 )
mesh = ExtResource( 12 )
skeleton = NodePath("../..")
material/0 = null

[node name="2" type="MeshInstance" parent="Buildings"]
transform = Transform( 0.052946, 0, -1.99719, 0, 1, 0, 0.998597, 0, 0.105892, 13.9393, -0.0274308, -0.120792 )
mesh = ExtResource( 14 )
skeleton = NodePath("../..")
material/0 = null

[node name="3" type="MeshInstance" parent="Buildings"]
transform = Transform( 0.46546, 0, -0.885069, 0, 1, 0, 0.885069, 0, 0.46546, 20.5515, -0.00578061, 2.6102 )
mesh = ExtResource( 11 )
skeleton = NodePath("../..")
material/0 = null

[node name="5" type="MeshInstance" parent="Buildings"]
transform = Transform( 0.052946, 0, -0.998597, 0, 1, 0, 0.998597, 0, 0.052946, 23.2803, -0.00836722, 12.4097 )
mesh = ExtResource( 8 )
skeleton = NodePath("../..")
material/0 = null

[node name="7" type="MeshInstance" parent="Buildings"]
transform = Transform( 0.99923, 0, 0.0392248, 0, 1, 0, -0.0392248, 0, 0.99923, 9.51442, -0.00504506, -1.67719 )
mesh = ExtResource( 13 )
skeleton = NodePath("../..")
material/0 = null

[node name="CloudsShadow" type="MeshInstance" parent="."]
transform = Transform( 20, 0, 0, 0, -8.74228e-07, 1, 0, -20, -4.37114e-08, -3.17895, 1.85508, -4.88032 )
material_override = ExtResource( 15 )
cast_shadow = 3
mesh = SubResource( 11 )
material/0 = null

[node name="Clouds2" type="MeshInstance" parent="."]
transform = Transform( -8.74228e-07, -20, 4.37114e-08, 0, -8.74228e-07, -1, 20, -8.74228e-07, 1.91069e-15, -2.09917, 1.85508, -6.27089 )
material_override = ExtResource( 15 )
mesh = SubResource( 11 )
material/0 = null

[node name="Grass" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.63414, -0.00050734, -2.44516 )

[node name="Grass0" parent="Grass" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02881, 0, -1.43178 )

[node name="Grass1" parent="Grass" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.96539, 0, -1.43178 )

[node name="Grass2" parent="Grass" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.57696, 0, -2.64354 )

[node name="Grass90" parent="Grass" instance=ExtResource( 17 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.141219, 0, -1.43231 )

[node name="Grass91" parent="Grass" instance=ExtResource( 17 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.141219, 0, -2.52902 )

[node name="Grass92" parent="Grass" instance=ExtResource( 17 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.54704, 0, -4.08305 )

[node name="Grass180" parent="Grass" instance=ExtResource( 17 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.633319, 0, -1.7928 )

[node name="Grass181" parent="Grass" instance=ExtResource( 17 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.872354, 0, -3.11562 )

[node name="Grass270" parent="Grass" instance=ExtResource( 17 )]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.556493, 0, -2.26373 )

[node name="Grass271" parent="Grass" instance=ExtResource( 17 )]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -1.56106, 0, -1.67641 )

[node name="Grass2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, -1, -2.63414, -0.00050734, -3.82587 )

[node name="Grass0" parent="Grass2" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02881, 0, -1.43178 )

[node name="Grass1" parent="Grass2" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.96539, 0, -1.43178 )

[node name="Grass2" parent="Grass2" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.57696, 0, -2.64354 )

[node name="Grass90" parent="Grass2" instance=ExtResource( 17 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.141219, 0, -1.43231 )

[node name="Grass91" parent="Grass2" instance=ExtResource( 17 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.141219, 0, -2.52902 )

[node name="Grass92" parent="Grass2" instance=ExtResource( 17 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.54704, 0, -4.08305 )

[node name="Grass180" parent="Grass2" instance=ExtResource( 17 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.633319, 0, -1.7928 )

[node name="Grass181" parent="Grass2" instance=ExtResource( 17 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.872354, 0, -3.11562 )

[node name="Grass270" parent="Grass2" instance=ExtResource( 17 )]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.556493, 0, -2.26373 )

[node name="Grass271" parent="Grass2" instance=ExtResource( 17 )]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -1.56106, 0, -1.67641 )

[node name="Grass3" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, -3.82137e-15, 1, -8.74228e-08, 1, 0, 1, 8.74228e-08, 4.37114e-08, 0.817866, -0.00050734, -5.85677 )

[node name="Grass0" parent="Grass3" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02881, 0, -1.43178 )

[node name="Grass1" parent="Grass3" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.96539, 0, -1.43178 )

[node name="Grass2" parent="Grass3" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.57696, 0, -2.64354 )

[node name="Grass90" parent="Grass3" instance=ExtResource( 17 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.141219, 0, -1.43231 )

[node name="Grass91" parent="Grass3" instance=ExtResource( 17 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.141219, 0, -2.52902 )

[node name="Grass92" parent="Grass3" instance=ExtResource( 17 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.54704, 0, -4.08305 )

[node name="Grass180" parent="Grass3" instance=ExtResource( 17 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.633319, 0, -1.7928 )

[node name="Grass181" parent="Grass3" instance=ExtResource( 17 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.872354, 0, -3.11562 )

[node name="Grass270" parent="Grass3" instance=ExtResource( 17 )]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.556493, 0, -2.26373 )

[node name="Grass271" parent="Grass3" instance=ExtResource( 17 )]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -1.56106, 0, -1.67641 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 0.658994, 0.692106, 0.294476, -0.365132, -0.047912, 0.929722, 0.657575, -0.720204, 0.221137, 0.0327163, 0.576408, -3.1357 )
light_color = Color( 0.596078, 0.760784, 0.956863, 1 )
light_energy = 2.323
shadow_enabled = true
shadow_color = Color( 0, 0.117647, 0.647059, 1 )
shadow_bias = 0.0
shadow_reverse_cull_face = true
spot_range = 13.6
spot_angle = 35.53
spot_angle_attenuation = 0.840896

[node name="Play Button" type="Spatial" parent="."]
transform = Transform( 0.0528765, 0.041773, 0.0596581, 0, 0.0737237, -0.0516219, -0.0728291, 0.0303287, 0.0433139, -0.403, 0.026, -3.255 )

[node name="Menu Buttons" type="Spatial" parent="."]

[node name="Play Button" type="Button" parent="Menu Buttons"]
margin_left = 75.0
margin_top = 219.0
margin_right = 201.0
margin_bottom = 256.0
custom_styles/focus = SubResource( 14 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit Button" type="Button" parent="Menu Buttons"]
margin_left = 243.0
margin_top = 219.0
margin_right = 343.0
margin_bottom = 255.0
custom_styles/focus = SubResource( 15 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play Model" type="MeshInstance" parent="Menu Buttons"]
transform = Transform( 0.0528765, 0.041773, 0.0596581, 1.53845e-09, 0.0737237, -0.0516219, -0.0728291, 0.0303287, 0.0433139, -0.403, 0.026, -3.255 )
mesh = ExtResource( 18 )
skeleton = NodePath("../..")
material/0 = null

[node name="Quit Model" type="MeshInstance" parent="Menu Buttons"]
transform = Transform( 0.0527315, 0.0418333, 0.0597441, 0, 0.0737237, -0.0516219, -0.0729341, 0.0302456, 0.0431951, -0.169, 0.03, -3.591 )
mesh = ExtResource( 19 )
skeleton = NodePath("../..")
material/0 = null

[connection signal="area_entered" from="Starship/Hurtbox3D" to="Starship" method="_on_Hurtbox3D_area_entered"]
[connection signal="area_entered" from="Starship2/Hurtbox3D" to="Starship2" method="_on_Hurtbox3D_area_entered"]
[connection signal="mouse_entered" from="Menu Buttons/Play Button" to="." method="_on_Play_Button_mouse_entered"]
[connection signal="mouse_exited" from="Menu Buttons/Play Button" to="." method="_on_Play_Button_mouse_exited"]
[connection signal="pressed" from="Menu Buttons/Play Button" to="." method="_on_Play_Button_pressed"]
[connection signal="mouse_entered" from="Menu Buttons/Quit Button" to="." method="_on_Quit_Button_mouse_entered"]
[connection signal="mouse_exited" from="Menu Buttons/Quit Button" to="." method="_on_Quit_Button_mouse_exited"]
[connection signal="pressed" from="Menu Buttons/Quit Button" to="." method="_on_Quit_Button_pressed"]

[editable path="Starship/Hurtbox3D"]
[editable path="Starship2/Hurtbox3D"]
